# pcb_defect_detection_using_morpholifical_operation

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: image_op.py
src/pdv_web_app/: manage.py
src/pdv_web_app/app/: forms.py  image_ssim.py  urls.py  views.py
src/pdv_web_app/app/templates/: index.html  login.html
src/pdv_web_app/pdv_web_app/: asgi.py  settings.py  urls.py  wsgi.py
